Clean up handling of Vantiq component (which needs very little).
Move Vantiq component into special category -- not a system component.  Clean
up discovery to avoid starting (via resolution of the "real one"). There's no
need to actually load or start the system components during the discovery
phase -- indeed it can be problematic.